--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "scripts": {
         "start": "webpack --watch",
         "dev": "devspace dev -i",
+        "deploy": "devspace run prod",
         "start:prod": "NODE_ENV=production node build/server.js",
         "build": "NODE_ENV=production webpack",
         "lint": "eslint --ext .ts,.tsx src/"
