--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "lint": "eslint --ext .ts,.tsx src/"
     },
     "dependencies": {
+        "dtrace-provider": "^0.8.8",
         "pg": "^7.17.1"
     },
     "devDependencies": {
