--- a/package.json
+++ b/package.json
@@ -105,38 +105,15 @@
     },
     "eslintConfig": {
         "root": true,
-        "overrides": [
-            {
-                "files": [
-                    "*.ts",
-                    "*.tsx"
-                ],
-                "parser": "@typescript-eslint/parser",
-                "parserOptions": {
-                    "ecmaVersion": 6,
-                    "sourceType": "module",
-                    "ecmaFeatures": {
-                        "modules": true
-                    }
-                },
-                "plugins": [
-                    "@typescript-eslint"
-                ],
-                "rules": {},
-                "extends": [
-                    "prettier",
-                    "prettier/@typescript-eslint"
-                ]
+        "parser": "@typescript-eslint/parser",
+        "parserOptions": {
+            "ecmaVersion": 6,
+            "sourceType": "module",
+            "ecmaFeatures": {
+                "modules": true
             }
-        ],
-        "plugins": [
-            "prettier"
-        ],
-        "rules": {
-            "prettier/prettier": "error"
         },
-        "extends": [
-            "prettier"
-        ]
+        "plugins": ["prettier", "@typescript-eslint"],
+        "extends": ["prettier", "prettier/@typescript-eslint"]
     }
 }
