--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
         "lint": "eslint --ext .ts,.tsx src/"
     },
     "dependencies": {
-        "dtrace-provider": "^0.8.8",
         "pg": "^7.17.1"
     },
     "devDependencies": {
@@ -26,6 +25,7 @@
         "@babel/preset-env": "^7.8.3",
         "@babel/preset-typescript": "^7.8.3",
         "@types/express": "^4.17.2",
+        "@types/morgan": "^1.7.37",
         "@types/node": "^13.1.8",
         "@typescript-eslint/eslint-plugin": "^2.16.0",
         "@typescript-eslint/parser": "^2.16.0",
@@ -36,7 +36,7 @@
         "eslint-config-prettier": "^6.9.0",
         "eslint-plugin-prettier": "^3.1.2",
         "express": "^4.17.1",
-        "express-requests-logger": "^2.0.6",
+        "morgan": "^1.9.1",
         "prettier": "^1.19.1",
         "start-server-webpack-plugin": "^2.2.5",
         "terser-webpack-plugin": "^2.3.2",
@@ -113,7 +113,13 @@
                 "modules": true
             }
         },
-        "plugins": ["prettier", "@typescript-eslint"],
-        "extends": ["prettier", "prettier/@typescript-eslint"]
+        "plugins": [
+            "prettier",
+            "@typescript-eslint"
+        ],
+        "extends": [
+            "prettier",
+            "prettier/@typescript-eslint"
+        ]
     }
 }
